--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -320,9 +320,20 @@
   opacity: 0.7;
 }
 
+#login .container-center {
+  padding: 0;
+  max-width: 40%;
+}
+
+@media (min-width: 300px) and (max-width: 992px) {
+  #login .container-center {
+    max-width: 96%;
+  }
+}
+
 #login .login-gmail {
-  -webkit-border-radius: 25px;
-          border-radius: 25px;
+  -webkit-border-radius: 15px;
+          border-radius: 15px;
 }
 
 #login .login-gmail .panel-body {
@@ -337,10 +348,6 @@
 #login .login-gmail .help-block {
   font-size: 1.1em;
   color: #a9b1ba;
-}
-
-#login .login-gmail img {
-  width: 73px;
 }
 
 .btn-menu {
@@ -399,6 +406,17 @@
   }
 }
 
+@media (min-width: 992px) {
+  .col-lg-offset-7 .navbar-right {
+    padding-right: 15px;
+  }
+}
+
+.info-block h6 {
+  color: #F3F1CCE6;
+  font-size: 14px;
+}
+
 @media (min-width: 300px) and (max-width: 1200px) {
   .info-block {
     text-align: center;
@@ -411,12 +429,6 @@
 @media (min-width: 300px) and (max-width: 992px) {
   .login-help {
     display: none;
-  }
-}
-
-@media (min-width: 300px) and (max-width: 992px) {
-  .container-center {
-    max-width: 90%;
   }
 }
 
@@ -458,7 +470,7 @@
 }
 
 .before-link a {
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 /*button delete*/
@@ -557,11 +569,56 @@
   font-size: 16px;
 }
 
-.tableExample2 tr tr:first-child {
+.tableExample2 tr td:first-child {
   width: 50%;
   font-size: 16px;
 }
 
 .tableExample2 tr td:nth-child(n+2) {
   padding-top: 15px;
+}
+
+/*Arrow in tabl*/
+.sorting_asc::after {
+  position: relative !important;
+  display: inline !important;
+  bottom: 0 !important;
+  right: 0 !important;
+  left: 11px !important;
+}
+
+.sorting::after {
+  position: relative !important;
+  display: inline !important;
+  bottom: 0 !important;
+  right: 0 !important;
+  left: 11px !important;
+}
+
+.sorting_desc::after {
+  position: relative !important;
+  display: inline !important;
+  bottom: 0 !important;
+  right: 0 !important;
+  left: 11px !important;
+}
+
+.btn-login {
+  max-width: 60%;
+  color: #f2fdff;
+  font-size: 1.2em;
+  -webkit-border-radius: 11px;
+          border-radius: 11px;
+  background-color: #4b4b4b;
+}
+
+@media (min-width: 300px) and (max-width: 1200px) {
+  .btn-login {
+    max-width: 92%;
+    font-size: 1.0em;
+  }
+}
+
+.graph {
+  overflow: auto;
 }
