--- a/www/styles/main.scss
+++ b/www/styles/main.scss
@@ -342,8 +342,15 @@ $secondary-color: #FFF;
 }
 
 #login {
+  & .container-center {
+    padding: 0;
+    max-width: 40%;
+    @include break($xs, $lg) {
+      max-width: 96%;
+    }
+  }
   & .login-gmail {
-    border-radius: 25px;
+    border-radius: 15px;
     & .panel-body {
       padding-top: 50px;
       padding-bottom: 40px;
@@ -354,16 +361,15 @@ $secondary-color: #FFF;
     & .help-block {
       font-size: 1.1em;
       color: #a9b1ba;
-    }
-    & img {
-      width: 73px;
+
     }
   }
+
 }
 
 .btn-menu {
   border: none;
-  @include break($xs, $lg){
+  @include break($xs, $lg) {
     padding-left: 0;
   }
   & i {
@@ -411,7 +417,19 @@ $secondary-color: #FFF;
   }
 }
 
+.col-lg-offset-7 {
+  & .navbar-right {
+    @include break($lg){
+      padding-right: 15px;
+    }
+  }
+}
+
 .info-block {
+  & h6 {
+    color: #F3F1CCE6;
+    font-size: 14px;
+  }
   @include break($xs, $xl) {
     & .col-lg-2 {
       padding-bottom: 13px;
@@ -426,11 +444,7 @@ $secondary-color: #FFF;
   }
 }
 
-.container-center {
-  @include break($xs, $lg) {
-    max-width: 90%;
-  }
-}
+
 
 .videos-info {
   @include break($xs, $lg) {
@@ -465,7 +479,7 @@ $secondary-color: #FFF;
   }
   & a {
 
-    font-size: 1.2em;
+    font-size: 1.1em;
   }
 }
 
@@ -484,7 +498,6 @@ $secondary-color: #FFF;
     }
   }
 }
-
 
 .blank {
   & .content {
@@ -548,8 +561,6 @@ $secondary-color: #FFF;
   display: inline-flex;
 }
 
-
-
 .table-overflow {
   & .dataTables_wrapper {
     @include break($xs, $lg) {
@@ -570,16 +581,56 @@ $secondary-color: #FFF;
   }
 }
 
-.tableExample2  {
+.tableExample2 {
   & tr {
-
-    & tr:first-child {
+    & td:first-child {
       width: 50%;
       font-size: 16px;
     }
     & td:nth-child(n+2) {
-     padding-top: 15px;
+      padding-top: 15px;
 
     }
   }
+}
+
+/*Arrow in tabl*/
+.sorting_asc::after {
+  position: relative !important;
+  display: inline !important;
+  bottom: 0 !important;
+  right: 0 !important;
+  left: 11px !important;
+}
+
+.sorting::after {
+  position: relative !important;
+  display: inline !important;
+  bottom: 0 !important;
+  right: 0 !important;
+  left: 11px !important;
+}
+
+.sorting_desc::after {
+  position: relative !important;
+  display: inline !important;
+  bottom: 0 !important;
+  right: 0 !important;
+  left: 11px !important;
+}
+
+.btn-login {
+  max-width: 60%;
+  color: #f2fdff;
+  font-size: 1.2em;
+  border-radius: 11px;
+  background-color: #4b4b4b;
+  @include break($xs, $xl) {
+    max-width: 92%;
+    font-size: 1.0em;
+  }
+}
+
+.graph {
+  overflow: auto;
 }
