--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -488,6 +488,16 @@
   color: #e7e6e8;
 }
 
+.dropdown input {
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2);
+  opacity: 0.9;
+  cursor: pointer;
+  margin-right: 6px;
+  margin-top: 12px;
+}
+
 .blank .content {
   margin-top: 0;
 }
@@ -495,6 +505,12 @@
 .content {
   margin-left: 0 !important;
   padding: 30px 0;
+}
+
+@media (min-width: 300px) and (max-width: 768px) {
+  .content {
+    margin-top: 0;
+  }
 }
 
 .link-history-and-content-mt-0 .content {
@@ -543,7 +559,6 @@
 .btn-hidden {
   display: none;
   right: 0;
-  z-index: 9999;
 }
 
 .btn-checkbox {
