--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -603,12 +603,23 @@
 }
 
 .tableExample2 tr td:first-child {
+  width: 10%;
+  font-size: 16px;
+}
+
+.tableExample2 tr td:nth-child(2) {
   width: 50%;
   font-size: 16px;
 }
 
-.tableExample2 tr td:nth-child(n+2) {
-  padding-top: 15px;
+.tableExample2 tr td:nth-child(2) span {
+  -webkit-transform: rotate(165deg);
+      -ms-transform: rotate(165deg);
+          transform: rotate(165deg);
+}
+
+.tableExample2 tr td:nth-child(n+3) {
+  padding-top: 12px;
 }
 
 /*Arrow in tabl*/
