--- a/www/styles/main.scss
+++ b/www/styles/main.scss
@@ -615,11 +615,18 @@ $secondary-color: #FFF;
 .tableExample2 {
   & tr {
     & td:first-child {
-      width: 50%;
+      width: 10%;
       font-size: 16px;
     }
-    & td:nth-child(n+2) {
-      padding-top: 15px;
+    & td:nth-child(2) {
+      width: 50%;
+      font-size: 16px;
+      & span {
+        transform: rotate(165deg);
+      }
+    }
+    & td:nth-child(n+3) {
+      padding-top: 12px;
 
     }
   }
