--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -292,12 +292,6 @@
   padding-left: 3rem !important;
 }
 
-@media (min-width: 992px) {
-  .pl-lg-3 {
-    padding-left: 25px;
-  }
-}
-
 .c-white {
   font-size: 15px;
 }
@@ -449,9 +443,48 @@
   font-size: 1.1em;
 }
 
+/*History link*/
+.link-history {
+  padding-top: 1rem;
+}
+
+@media (min-width: 300px) and (max-width: 992px) {
+  .link-history {
+    padding-top: 0 !important;
+  }
+}
+
+@media (min-width: 300px) and (max-width: 992px) {
+  .link-history {
+    text-align: center;
+    float: none;
+  }
+}
+
+@media (min-width: 300px) and (max-width: 992px) {
+  .link-history a {
+    text-align: center;
+    float: none;
+  }
+}
+
 .before-link {
   padding-top: 6%;
   padding-bottom: 5px;
+}
+
+.before-link .pe-7s-angle-right {
+  font-size: 1.7em !important;
+}
+
+@media (min-width: 300px) and (max-width: 992px) {
+  .before-link .pe-7s-angle-right {
+    display: none;
+  }
+}
+
+.before-link .ml-4 {
+  margin-left: 8px !important;
 }
 
 @media (min-width: 300px) and (max-width: 992px) {
@@ -545,38 +578,53 @@
   float: right;
 }
 
+.modal-window .add-all {
+  position: absolute;
+  padding-top: 10px;
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2);
+  opacity: 0.9;
+}
+
+@media (min-width: 300px) and (max-width: 576px) {
+  .modal-window .add-all {
+    position: relative;
+    bottom: 15px;
+    text-align: center;
+  }
+}
+
+.modal-window .modal-footer .btn-radios {
+  display: inline-block;
+}
+
+@media (min-width: 992px) {
+  .modal-window .modal-footer .btn-radios {
+    margin-right: 100px;
+  }
+}
+
+@media (min-width: 300px) and (max-width: 992px) {
+  .modal-window .modal-footer .btn-radios {
+    text-align: center;
+    padding: 20px 0;
+  }
+}
+
+@media (min-width: 300px) and (max-width: 992px) {
+  .modal-window .modal-footer .btn-radios .radio {
+    padding: 20px 0;
+    margin-right: 20px;
+  }
+}
+
+.modal-settings .radio-inline {
+  margin: 15px  0 0 0;
+}
+
 .tabs-videos-growth .nav-tabs a {
   font-size: 1.3em;
-}
-
-.link-history {
-  padding-top: 1rem;
-}
-
-@media (min-width: 300px) and (max-width: 992px) {
-  .link-history {
-    padding-top: 0 !important;
-  }
-}
-
-@media (min-width: 300px) and (max-width: 992px) {
-  .link-history {
-    text-align: center;
-    float: none;
-  }
-}
-
-@media (min-width: 300px) and (max-width: 992px) {
-  .link-history a {
-    text-align: center;
-    float: none;
-  }
-}
-
-@media (min-width: 300px) and (max-width: 992px) {
-  .link-history .pe-7s-back {
-    display: none;
-  }
 }
 
 .btn-hidden {
@@ -598,43 +646,79 @@
   }
 }
 
-.tableExample1 td {
-  font-size: 14px;
+.date-average .panel {
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+}
+
+.date-average .table-bordered td {
   color: #e7e7e7;
 }
 
-.tableExample1 td tr:first-child {
+.tableExample1 td {
+  color: #e7e7e7;
+}
+
+.tableExample1 .delta {
+  visibility: hidden;
+}
+
+.tableExample1 .delta-number span {
+  margin-left: -15px;
+  color: #939393;
+}
+
+.tableExample2 td {
+  color: #f4fffc;
+}
+
+.tableExample2 td tr:first-child {
   width: 50%;
-  font-size: 16px;
+}
+
+.tableExample2 tbody {
+  font-size: 12px;
+}
+
+.tableExample2 tr {
+  font-size: 11px;
 }
 
 .tableExample2 tr td:first-child {
-  width: 50%;
-  font-size: 16px;
+  width: 5%;
 }
 
-.tableExample2 tr td:nth-child(n+2) {
-  padding-top: 15px;
+.tableExample2 tr td:nth-child(2) {
+  font-size: 14px;
+  width: 60%;
+}
+
+.tableExample2 tr td:nth-child(2) span {
+  -webkit-transform: rotate(165deg);
+      -ms-transform: rotate(165deg);
+          transform: rotate(165deg);
+}
+
+.tableExample2 tr td:nth-child(n+3) {
+  padding-top: 12px;
+}
+
+.tableExample2 .delta {
+  visibility: hidden;
+}
+
+.tableExample2 .delta-number span {
+  margin-left: -20px;
+  color: #969696;
+}
+
+/*table  buttons*/
+.week, .month, .allTime {
+  display: none;
 }
 
 /*Arrow in tabl*/
-.sorting_asc::after {
-  position: relative !important;
-  display: inline !important;
-  bottom: 0 !important;
-  right: 0 !important;
-  left: 11px !important;
-}
-
-.sorting::after {
-  position: relative !important;
-  display: inline !important;
-  bottom: 0 !important;
-  right: 0 !important;
-  left: 11px !important;
-}
-
-.sorting_desc::after {
+.sorting_asc::after, .sorting::after, .sorting_desc::after {
   position: relative !important;
   display: inline !important;
   bottom: 0 !important;
@@ -662,16 +746,6 @@
   overflow: auto;
 }
 
-.pe-7s-back {
-  font-size: 1.2em !important;
-}
-
-@media (min-width: 300px) and (max-width: 992px) {
-  .pe-7s-back {
-    display: none;
-  }
-}
-
 .ui-sortable .panel-body {
   cursor: auto;
 }
@@ -680,9 +754,9 @@
   padding-top: 20px;
 }
 
-@media (min-width: 300px) and (max-width: 576px) {
+@media (min-width: 300px) and (max-width: 992px) {
   .move-block {
-    margin-left: -10px;
+    display: none;
   }
 }
 
@@ -707,4 +781,27 @@
 
 .container .alert strong {
   font-size: 12px;
+}
+
+.go-top {
+  display: inline-block;
+  position: fixed;
+  bottom: 25px;
+  right: 70px;
+  color: rgba(108, 111, 120, 0.9) !important;
+  text-decoration: none;
+  font-size: 25px;
+}
+
+@media (min-width: 300px) and (max-width: 992px) {
+  .go-top {
+    display: none !important;
+  }
+}
+
+.go-top:hover {
+  -webkit-transition: all ease 0.5s;
+  -o-transition: all ease 0.5s;
+  transition: all ease 0.5s;
+  color: #7e858c !important;
 }
